--- a/custom_components/set_comfort/manifest.json
+++ b/custom_components/set_comfort/manifest.json
@@ -2,10 +2,10 @@
   "domain": "set_comfort",
   "name": "Thermal Comfort (SET)",
   "version": "1.0.0",
-  "documentation": "https://github.com/yourusername/set_comfort",
+  "documentation": "https://github.com/1iverea9er/set_comfort",
   "requirements": ["pythermalcomfort>=1.3.1"],
   "dependencies": [],
-  "codeowners": ["@yourusername"],
+  "codeowners": ["1iverea9er"],
   "config_flow": true,
   "iot_class": "calculated"
 }
