--- a/custom_components/set_comfort/manifest.json
+++ b/custom_components/set_comfort/manifest.json
@@ -1,9 +1,11 @@
 {
   "domain": "set_comfort",
-  "name": "SET Comfort",
+  "name": "Thermal Comfort (SET)",
   "version": "1.0.0",
   "documentation": "https://github.com/1iverea9er/set_comfort",
+  "requirements": ["pythermalcomfort>=1.3.1"],
   "dependencies": [],
   "codeowners": ["@1iverea9er"],
-  "requirements": []
+  "config_flow": true,
+  "iot_class": "calculated"
 }
